fix(style): remove box-shadow from .cv on mobile

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -151,6 +151,9 @@ section h2 {
     margin-left: 0;
     border-left: none;
   }
+  .cv {
+    box-shadow: none;
+  }
 }
 
 // ==============================
